--- a/python2.0/lesson9/Seminar9.ipynb
+++ b/python2.0/lesson9/Seminar9.ipynb
@@ -1,35 +1,16 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "WnnidZFLDbd9",
-        "qiqlliX9ZnEj",
-        "wbTaslZW6qmi"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "WnnidZFLDbd9"
+      },
       "source": [
         "### Задача №57. ###\n",
         "1. Прочесть с помощью pandas файл california_housing_test.csv, который находится в папке sample_data\n",
         "2. Посмотреть сколько в нем строк и столбцов\n",
         "3. Определить какой тип данных имеют столбцы"
-      ],
-      "metadata": {
-        "id": "WnnidZFLDbd9"
-      }
+      ]
     },
     {
       "cell_type": "code",
@@ -44,41 +25,18 @@
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 1 Прочесть с помощью pandas файл california_housing_test.csv, который находится в папке sample_data\n",
-        "# data_frame (df)\n",
-        "df = pd.read_csv(\"sample_data/california_housing_test.csv\")\n",
-        "df.head() #  первые 5 строк на экран (если указываем в скобках, то выводит это кол-во строк)\n",
-        "df.tail() #  последние 5 строк по аналогии"
-      ],
+      "execution_count": 2,
       "metadata": {
-        "id": "KSS36Kho75FU",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 206
         },
+        "id": "KSS36Kho75FU",
         "outputId": "adc32077-e0f9-41da-8f9a-59aeb5d7d8e8"
       },
-      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
-            "text/plain": [
-              "      longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
-              "2995    -119.86     34.42                23.0       1450.0           642.0   \n",
-              "2996    -118.14     34.06                27.0       5257.0          1082.0   \n",
-              "2997    -119.70     36.30                10.0        956.0           201.0   \n",
-              "2998    -117.12     34.10                40.0         96.0            14.0   \n",
-              "2999    -119.63     34.42                42.0       1765.0           263.0   \n",
-              "\n",
-              "      population  households  median_income  median_house_value  \n",
-              "2995      1258.0       607.0         1.1790            225000.0  \n",
-              "2996      3496.0      1036.0         3.3906            237200.0  \n",
-              "2997       693.0       220.0         2.2895             62000.0  \n",
-              "2998        46.0        14.0         3.2708            162500.0  \n",
-              "2999       753.0       260.0         8.5608            500001.0  "
-            ],
             "text/html": [
               "\n",
               "  <div id=\"df-757eddb0-6be1-4acc-81f1-2717b00e78ba\" class=\"colab-df-container\">\n",
@@ -383,57 +341,75 @@
               "</div>\n",
               "    </div>\n",
               "  </div>\n"
+            ],
+            "text/plain": [
+              "      longitude  latitude  housing_median_age  total_rooms  total_bedrooms  \\\n",
+              "2995    -119.86     34.42                23.0       1450.0           642.0   \n",
+              "2996    -118.14     34.06                27.0       5257.0          1082.0   \n",
+              "2997    -119.70     36.30                10.0        956.0           201.0   \n",
+              "2998    -117.12     34.10                40.0         96.0            14.0   \n",
+              "2999    -119.63     34.42                42.0       1765.0           263.0   \n",
+              "\n",
+              "      population  households  median_income  median_house_value  \n",
+              "2995      1258.0       607.0         1.1790            225000.0  \n",
+              "2996      3496.0      1036.0         3.3906            237200.0  \n",
+              "2997       693.0       220.0         2.2895             62000.0  \n",
+              "2998        46.0        14.0         3.2708            162500.0  \n",
+              "2999       753.0       260.0         8.5608            500001.0  "
             ]
           },
+          "execution_count": 2,
           "metadata": {},
-          "execution_count": 2
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 1 Прочесть с помощью pandas файл california_housing_test.csv, который находится в папке sample_data\n",
+        "# data_frame (df)\n",
+        "df = pd.read_csv(\"sample_data/california_housing_test.csv\")\n",
+        "df.head() #  первые 5 строк на экран (если указываем в скобках, то выводит это кол-во строк)\n",
+        "df.tail() #  последние 5 строк по аналогии"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 2 Посмотреть сколько в нем строк и столбцов\n",
-        "df.shape"
-      ],
+      "execution_count": 3,
       "metadata": {
-        "id": "SFgs1aLjGby6",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "SFgs1aLjGby6",
         "outputId": "8a1e7fe7-15a0-4b73-ca9d-2a2ec24c516b"
       },
-      "execution_count": 3,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "(3000, 9)"
             ]
           },
+          "execution_count": 3,
           "metadata": {},
-          "execution_count": 3
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 2 Посмотреть сколько в нем строк и столбцов\n",
+        "df.shape"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 3 Определить какой тип данных имеют столбцы\n",
-        "df.dtypes # вывод типа данных по каждому столбцу"
-      ],
+      "execution_count": 4,
       "metadata": {
-        "id": "SMjtYRaMGp9U",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "SMjtYRaMGp9U",
         "outputId": "e4efc51b-910e-4119-db5d-b325d3eee89e"
       },
-      "execution_count": 4,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "longitude             float64\n",
@@ -448,28 +424,30 @@
               "dtype: object"
             ]
           },
+          "execution_count": 4,
           "metadata": {},
-          "execution_count": 4
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "# 3 Определить какой тип данных имеют столбцы\n",
+        "df.dtypes # вывод типа данных по каждому столбцу"
       ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.info() # вывод информацию: какие данные есть"
-      ],
+      "execution_count": 5,
       "metadata": {
-        "id": "m1X0MybaHHm2",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "m1X0MybaHHm2",
         "outputId": "8951919b-0c8e-4c52-cd57-1196111eb710"
       },
-      "execution_count": 5,
       "outputs": [
         {
-          "output_type": "stream",
           "name": "stdout",
+          "output_type": "stream",
           "text": [
             "<class 'pandas.core.frame.DataFrame'>\n",
             "RangeIndex: 3000 entries, 0 to 2999\n",
@@ -489,125 +467,133 @@
             "memory usage: 211.1 KB\n"
           ]
         }
+      ],
+      "source": [
+        "df.info() # вывод информацию: какие данные есть"
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qiqlliX9ZnEj"
+      },
       "source": [
         "### Задача №59. ###\n",
         "1. Проверить есть ли в файле пустые значения\n",
         "2. Показать median_house_value где median_income < 2\n",
         "3. Показать данные в первых 2 столбцах\n",
         "4. Выбрать данные где housing_median_age < 20 и median_house_value > 70000"
-      ],
-      "metadata": {
-        "id": "qiqlliX9ZnEj"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 1 Проверить есть ли в файле пустые значения\n",
-        "df.isnull().sum()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "QFCrb-RBHhcm"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 1 Проверить есть ли в файле пустые значения\n",
+        "df.isnull().sum()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 2 Показать median_house_value где median_income < 2\n",
-        "df.loc[df['median_income'] < 2, 'median_house_value']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "IIRwQ37cZ13o"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 2 Показать median_house_value где median_income < 2\n",
+        "df.loc[df['median_income'] < 2, 'median_house_value']"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 3 Показать данные в первых 2 столбцах\n",
-        "df[['longitude', 'latitude']] # один столбец выводим - передаем в виде строки, несколько стобцов - в виде списка"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "ZD3Ab8xwayOz"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 3 Показать данные в первых 2 столбцах\n",
+        "df[['longitude', 'latitude']] # один столбец выводим - передаем в виде строки, несколько стобцов - в виде списка"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "7yXWxbcJdMUM"
+      },
+      "outputs": [],
       "source": [
         "# обращаемся к номеру строки\n",
         "df.iloc[2999]\n",
         "\n",
         "# обращаеся к столбцу: df['название столбца']"
-      ],
-      "metadata": {
-        "id": "7yXWxbcJdMUM"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df.iloc[2999]['longitude']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "jd26jv6Eds4U"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "df.iloc[2999]['longitude']"
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "Cc3OgbLUyxFx"
+      },
+      "outputs": [],
       "source": [
         "# 4 Выбрать данные где housing_median_age < 20 и median_house_value > 70000\n",
         "df[(df['housing_median_age'] < 20) & (df['median_house_value'] > 70000)]\n",
         "# & - и(and)\n",
         "# | - или(or)"
-      ],
-      "metadata": {
-        "id": "Cc3OgbLUyxFx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "wbTaslZW6qmi"
+      },
       "source": [
         "### Задача №61. ###\n",
         "1. Определить какое максимальное и минимальное значение median_house_value\n",
         "2. Показать максимальное median_house_value, где median_income = 3.1250\n",
         "3.Узнать какая максимальная population в зоне минимального значения median_house_value"
-      ],
-      "metadata": {
-        "id": "wbTaslZW6qmi"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "5u2FVgrO6ytr"
+      },
+      "outputs": [],
       "source": [
         "# 1 Определить какое максимальное и минимальное значение median_house_value\n",
         "print(df['median_house_value'].min(), df['median_house_value'].max())\n",
         "print()\n",
         "# еще один вариант:\n",
         "df['median_house_value'].describe()"
-      ],
-      "metadata": {
-        "id": "5u2FVgrO6ytr"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": null,
+      "metadata": {
+        "id": "OTNVoqyG7kPx"
+      },
+      "outputs": [],
       "source": [
         "# 2 Показать максимальное median_house_value, где median_income = 3.1250\n",
         "\n",
@@ -615,73 +601,88 @@
         "\n",
         "# 2.1\n",
         "df[df['median_income'] == 3.1250]"
-      ],
-      "metadata": {
-        "id": "OTNVoqyG7kPx"
-      },
-      "execution_count": null,
-      "outputs": []
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 2.2 Можем обратиться к столбцу median_house_value вот так:\n",
-        "df[df['median_income'] == 3.1250]['median_house_value']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "goWAx8jI-lOi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 2.2 Можем обратиться к столбцу median_house_value вот так:\n",
+        "df[df['median_income'] == 3.1250]['median_house_value']"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 2.2 А можем через функцию loc\n",
-        "df.loc[df['median_income'] == 3.1250, 'median_house_value']"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "rjUi-Q0t_Kf8"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 2.2 А можем через функцию loc\n",
+        "df.loc[df['median_income'] == 3.1250, 'median_house_value']"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 2.3\n",
-        "df.loc[df['median_income'] == 3.1250, 'median_house_value'].max()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "e1I5gvU9_YWi"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 2.3\n",
+        "df.loc[df['median_income'] == 3.1250, 'median_house_value'].max()"
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "# 3 Узнать какая максимальная population в зоне минимального значения median_house_value\n",
-        "df[df['median_house_value'] == df['median_house_value'].min()]['population'].max()"
-      ],
+      "execution_count": null,
       "metadata": {
         "id": "rQDuQLZk_tYE"
       },
-      "execution_count": null,
-      "outputs": []
+      "outputs": [],
+      "source": [
+        "# 3 Узнать какая максимальная population в зоне минимального значения median_house_value\n",
+        "df[df['median_house_value'] == df['median_house_value'].min()]['population'].max()"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "yemx3-fyCQfZ"
+      },
       "source": [
         "### Задача 40. ###\n",
         "Работать с файлом california_housing_train.csv, который находится в папке sample_data. Определить среднюю стоимость дома, где кол-во людей от 0 до 500 (population)"
-      ],
-      "metadata": {
-        "id": "yemx3-fyCQfZ"
-      }
+      ]
     },
     {
       "cell_type": "code",
+      "execution_count": 13,
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "ijOPxKHZCejn",
+        "outputId": "6f543a2d-8d31-4369-ebdf-a1ba40a967e4"
+      },
+      "outputs": [
+        {
+          "data": {
+            "text/plain": [
+              "206683.83635227982"
+            ]
+          },
+          "execution_count": 13,
+          "metadata": {},
+          "output_type": "execute_result"
+        }
+      ],
       "source": [
         "# Домашнее задание\n",
         "import pandas as pd\n",
@@ -698,63 +699,63 @@
         "# 2 8 10 15 18 20 27 34\n",
         "# mean() - (2+8+10+15+18+20+27+34) / 8 = 16.75\n",
         "# median() - (15+18) / 2 = 16.5"
-      ],
-      "metadata": {
-        "id": "ijOPxKHZCejn",
-        "colab": {
-          "base_uri": "https://localhost:8080/"
-        },
-        "outputId": "6f543a2d-8d31-4369-ebdf-a1ba40a967e4"
-      },
-      "execution_count": 13,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "206683.83635227982"
-            ]
-          },
-          "metadata": {},
-          "execution_count": 13
-        }
       ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "gm0hJlflCY0m"
+      },
       "source": [
         "### Задача 42. ###\n",
         "Узнать какая максимальная households в зоне минимального значения population"
-      ],
-      "metadata": {
-        "id": "gm0hJlflCY0m"
-      }
+      ]
     },
     {
       "cell_type": "code",
-      "source": [
-        "df[df['population'] == df['population'].min()]['households'].max()"
-      ],
+      "execution_count": 17,
       "metadata": {
-        "id": "FcSTlKamCd7F",
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
+        "id": "FcSTlKamCd7F",
         "outputId": "9748960d-bb77-4fcf-c049-1e0f93d5bf6e"
       },
-      "execution_count": 17,
       "outputs": [
         {
-          "output_type": "execute_result",
           "data": {
             "text/plain": [
               "4.0"
             ]
           },
+          "execution_count": 17,
           "metadata": {},
-          "execution_count": 17
+          "output_type": "execute_result"
         }
+      ],
+      "source": [
+        "df[df['population'] == df['population'].min()]['households'].max()"
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "WnnidZFLDbd9",
+        "qiqlliX9ZnEj",
+        "wbTaslZW6qmi"
+      ],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python",
+      "version": "3.12.0"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
